--- a/app/src/main/res/layout/plant_provider_widget.xml
+++ b/app/src/main/res/layout/plant_provider_widget.xml
@@ -1,14 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#09C"
+    android:layout_width="170dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#ffffff"
     android:padding="@dimen/widget_margin"
-    android:orientation="vertical">
+    android:orientation="vertical" >
+
+    <ImageView
+        android:id="@+id/widget_water_drop"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/water_drop_blue" />
 
     <ImageView
         android:id="@+id/widget_plant_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:src="@drawable/grass" />
+
 </LinearLayout>
