--- a/app/src/main/res/layout/plant_provider_widget.xml
+++ b/app/src/main/res/layout/plant_provider_widget.xml
@@ -20,4 +20,14 @@
         android:layout_gravity="center"
         android:src="@drawable/grass" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/widget_plant_name"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:textStyle="bold"
+        android:textSize="32sp"
+        android:text="Plant Name"/>
+
 </LinearLayout>
