--- a/app/src/main/res/layout/plant_provider_widget.xml
+++ b/app/src/main/res/layout/plant_provider_widget.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="170dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
@@ -7,6 +7,7 @@
     android:orientation="vertical" >
 
     <ImageView
+        android:layout_marginTop="20dp"
         android:id="@+id/widget_water_drop"
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -28,6 +29,7 @@
         android:layout_gravity="center_horizontal"
         android:textStyle="bold"
         android:textSize="32sp"
-        android:text="Plant Name"/>
+        android:text=""
+        android:layout_marginBottom="10dp" />
 
 </LinearLayout>
